# rio-kutty-story-management

./: .gitignore  ARCHITECTURE.md  BUG_503_on_model copy.md  Bugs.md  CLAUDE.md  README.md  activties_bug.md  bug.md  github-profile-README.md  interview-questions.md  pitch-deck.md  planning.md  prompt_activties.md  pyproject.toml
.claude/: settings.local.json
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-e2e-test-suite/: clarify.md  data-model.md  plan.md  research.md  spec.md  tasks.md
src/: main.py
src/agents/: mcq_agent.py  moral_agent.py
src/api/: media.py  stories.py
src/models/: state.py
src/rio_kutty.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: ai_service.py  audio_service.py
src/utils/: config.py  tracing.py
src/workflows/: activity_workflow.py  audio_workflow.py  image_workflow.py  master_workflow.py  story_creator_workflow.py  story_topics_workflow.py
test/reports/: run_20260511_060551.json  run_20260511_060615.json  run_20260511_104503.json  run_20260511_105106.json  run_20260516_130248.json
tests/e2e/: conftest.py  test_pipeline_edge_cases.py  test_pipeline_happy_path.py  test_pipeline_retry_hitl.py  test_wf1_topics.py  test_wf2_story.py  test_wf3_image.py  test_wf4_audio.py  test_wf5_activities.py
tests/integration/: test_api.py  test_deepeval_activity_llms.py  (+1 more)
(+38 files in other folders)
